# mcp_data_analyzer

./: README.md  pyproject.toml
src/mcp_data_analyzer/: server.py
